--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsdom": "^16.2.2",
-    "mongoose": "^5.9.16"
+    "mongoose": "^5.9.16",
+    "nunjucks": "^3.2.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
