--- a/backend/package.json
+++ b/backend/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "axios": "^0.20.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.3",
     "ts-node": "^9.0.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.7",
     "@types/express": "^4.17.8",
     "@types/mongodb": "^3.5.27",
     "@types/mongoose": "^5.7.36",
